website - anote - fix page - pi / no pi, status tags

--- a/anote.html
+++ b/anote.html
@@ -143,38 +143,30 @@
                         <div class="blog-content">
                             <h3>About Anote</h3>
 
-                            <p>Anote is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based token, 
-                                similar to <a href="https://minepi.com/" target="_blank">PI</a>, but with few major differences:
-                            </p>
-                            
+                            <p>Anote is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based cryptocurrency that can be mined, 
+                            sent, received, exchanged or sold and used right from the start to purchase ads on our Telegram ad channel - 
+                            <a href="https://t.me/AnonShout">AnonShout</a>. This is also what gives it value right away because you can only purchase 
+                            ads on AnonShout by using anotes. You can read more about AnonShout <a href="/anonshout">here</a>. Anote  
+                            uses these two apps for mining and wallet:</p>
+
                             <p>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's a Waves token so it's fully functional 
-                                right away - you can send it, receive it, exchange it etc.<br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's mined / minted by subscribing to our 
-                                <a href="https://telegram.org/" target="_blank">Telegram</a> ad channels and that's 
-                                what gives it value right away<br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it uses Telegram and 
-                                <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves wallet</a> 
-                                which are both mature projects so you can be sure nobody is spying
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://telegram.org/" target="_blank">Telegram Instant Messenger</a><br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves Wallet</a>
                             </p>
 
                             <p>It will be expanded with new ways to spend it, it's not just mining and marketing, it's also an 
                                 educational token with a mission to educate people how to use crypto (send, receive, exchange, ...) 
                                 and to show them projects like <a href="https://beta.neutrino.at/" target="_blank">Neutrino</a> 
-                                in order to democratize monetary systems and take monopoly away from them (banks). 
-                                It's designed to bring crypto to ordinary people.</p>
+                                in order to democratize monetary systems and break the banking monopoly. It's designed to bring 
+                                crypto to ordinary people.</p>
 
                             <p>It is also a main currency of Anonutopia, smart contract country.</p>
 
                             <br>
 
-                            <h3>Anote Referral System</h3>
+                            <h4><i class="fa fa-link"></i> Anote Referral System</h4>
 
-                            <p>Anote has a referral system similar to one PI uses. It's used to build web of trust, but you can also earn with 
-                                it. Every time one of your referred users activates a free Anote, you'll receive 0.5. Also, if they start mining, 
-                                your mining power will increse for 0.05 Anote / hour. So, for example, if you have 5 referred users, your mining 
-                                power will be 0.45 Anote / hour (0.2 for your basic mining and 5 * 0.05 for referrals).
-                            </p>
+                            <p>Anote has a referral that is used to build a web of trust, but you can also earn with it.</p>
 
                             <p>There are two way to refer somebody to Anote / Anonutopia:</p>
 
@@ -186,6 +178,46 @@
                             </p>
 
                             <p>If one of your referred users purchases Anote for Waves (creates new denominations), you get 20%.</p>
+
+                            <p>You can read more about referral system and mining in our <a href="/mine">mining tutorial</a>.</p>
+
+                            <br>
+
+                            <h4><i class="fa fa-check"></i> Compared to PI</h4>
+
+                            <p>Anote is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based token, 
+                                similar to <a href="https://minepi.com/" target="_blank">PI</a>, but with few major differences:
+                            </p>
+                            
+                            <p>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's a Waves token so it's fully functional 
+                                right away - you can send it, receive it, exchange it etc.<br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's mined by subscribing to our 
+                                <a href="https://telegram.org/" target="_blank">Telegram</a> ad channels and that's 
+                                what gives it value right away<br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it uses Telegram and 
+                                <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves wallet</a> 
+                                which are both mature projects so you can be sure nobody is spying
+                            </p>
+
+                            <br>
+
+                            <h4><i class="fa fa-tag"></i> Anote / Anonutopia Status Tags</h4>
+
+                            <p>When you register with Anonutopia and start mining and being part of the community, you can get 
+                            one of these status tags:</p>
+
+                            <p>
+                                <i class="fa fa-tag"></i>&nbsp;&nbsp;Guest<br>
+                                <i class="fa fa-tag"></i>&nbsp;&nbsp;Dissident<br>
+                                <i class="fa fa-tag"></i>&nbsp;&nbsp;Pioneer<br>
+                                <i class="fa fa-tag"></i>&nbsp;&nbsp;Miner<br>
+                            </p>
+
+                            <p>If you don't register your Waves address, you're a "Guest", otherwise you're a "Dissident". But if you start mining, 
+                            you become "Pioneer". However, if you add more than 3 people to Anonutopia, you become a "Miner" and your mining power gets multiplied by 10.</p>
+
+                            <p>You can read more about referral system and mining in our <a href="/mine">mining tutorial</a>.</p>
 
                         </div>
                     </div>
