--- a/mine.html
+++ b/mine.html
@@ -144,7 +144,7 @@
 
                             <h3>How to Start Mining Anote?</h3>
 
-                            <p>In order to mine / mint, send, receive and sell / exchange Anote, you need these two applications:</p>
+                            <p>In order to mine, send, receive and sell / exchange Anote, you need these two applications:</p>
 
                             <p>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://telegram.org/" target="_blank">Telegram Instant Messenger</a><br>
