--- a/anonshout.html
+++ b/anonshout.html
@@ -175,8 +175,8 @@
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonshout">How to Use AnonsRobot?</a>
-                            <a href="/anonsrobot">How to Use AnonShout?</a>
+                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
+                            <a href="/anonshout">How to Use AnonShout?</a>
                         </div>
                     </div>
                     
