website - AnonShout tutorial

--- a/anonshout.html
+++ b/anonshout.html
@@ -144,16 +144,19 @@
                             <h3>About AnonShout</h3>
                             <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels that give <a href="/anote">Anote</a> 
                             its value because ads on the network can only be purchased with anotes and new anotes are minted (generated) by watching ads.</p>
-                            <p style="margin-bottom: 40px;">You can bid for ads on AnonShout by sending anotes to the address bellow, but you need to be 
+                            <p>You can bid for ads on AnonShout by sending anotes to the address bellow, but you need to be 
                             registered with <a href="https://t.me/AnonsRobot">AnonsRobot</a>.</p>
 
+                            <p>If you would like to see the highest bid for tomorrow, hit /shoutinfo command with AnonsRobot. You can find a tutorial on 
+                            AnonsRobot usage <a href="/anonsrobot">here</a>.</p>
+
                             <h4><i class="fa fa-link"></i> AnonShout Waves Address</h4>
-                            <div class="well" style="margin-bottom: 40px;">
+                            <div class="well">
                                 <p class="text-center" style="margin-bottom: 0; word-break: break-all;">3PQiS5wzStTuoVuPWrgN7HcDoVYC8SSask3</p>
                             </div>
 
                             <h4><i class="fa fa-qrcode"></i> AnonShout QR Code</h4>
-                            <div class="well" style="margin-bottom: 40px;">
+                            <div class="well">
                                 <p class="text-center" style="margin-bottom: 0;">
                                     <img src="./static/img/shoutqrcode.png" alt="QR Code Address" style="min-width: 30%; max-width: 100%;">
                                 </p>
