--- a/anonshout.html
+++ b/anonshout.html
@@ -148,7 +148,8 @@
                             registered with <a href="https://t.me/AnonsRobot">AnonsRobot</a>.</p>
 
                             <p>If you would like to see the highest bid for tomorrow, hit /shoutinfo command with AnonsRobot. You can find a tutorial on 
-                            AnonsRobot usage <a href="/anonsrobot">here</a>.</p>
+                            AnonsRobot usage <a href="/anonsrobot">here</a>. Currently we only have one ads channel, but we will expand it with more 
+                            channels per country and interest.</p>
 
                             <h4><i class="fa fa-link"></i> AnonShout Waves Address</h4>
                             <div class="well">
