--- a/anonsrobot.html
+++ b/anonsrobot.html
@@ -145,7 +145,7 @@
 
                             <p><a href="https://t.me/AnonsRobot">AnonsRobot</a> is a <a href="https://telegram.org/" target="_blank">Telegram</a> bot 
                                 and main tool for Anonutopia and Anote administration. For now it's mainly used for mining anotes. You use it by 
-                                chatting with it, as with any other user and providing it with commands that start with / sign, like /register, 
+                                chatting with it, as with any other user and providing it with commands that start with "/" sign, like /register, 
                                 /mine, /status and similar. You can use it in our Telegram groups or in private messages which is a preferred way. 
                                 These are currently available commands:
                             </p>
