--- a/anote.html
+++ b/anote.html
@@ -166,7 +166,7 @@
 
                             <p>Anote has a referral that is used to build a web of trust, but you can also earn with it.</p>
 
-                            <p>There are two way to refer somebody to Anote / Anonutopia:</p>
+                            <p>There are two ways to refer somebody to Anote / Anonutopia:</p>
 
                             <p>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;add them to one of our groups - 
