--- a/mine.html
+++ b/mine.html
@@ -177,7 +177,7 @@
                             power becomes 0.45 anotes per hour.
                             </p>
 
-                            <p>There are two way to refer somebody to Anote / Anonutopia:</p>
+                            <p>There are two ways to refer somebody to Anote / Anonutopia:</p>
 
                             <p>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;add them to one of our groups - 
