--- a/anonshout.html
+++ b/anonshout.html
@@ -89,10 +89,12 @@
                     <li class="has-dropdown">
                         <a href="/anote">Anote</a>
                         <ul class="dropdown">
+                            <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
                             <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
+                            <li><a href="/pi-comparison">Comparison to PI</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
@@ -176,11 +178,13 @@
                     <div class="widget">
                         <h3 class="title">Menu</h3>
                         <div class="widget-category">
+                            <a href="/beginner">Absolute Beginner's Guide</a>
                             <a href="/anote">About Anote</a>
                             <a href="/mine">How to Mine?</a>
                             <a href="/purchase">How to Purchase?</a>
                             <a href="/anonsrobot">How to Use AnonsRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
+                            <a href="/pi-comparison">Comparison to PI</a>
                         </div>
                     </div>
                     
