--- a/contact.html
+++ b/contact.html
@@ -89,10 +89,12 @@
                     <li class="has-dropdown">
                         <a href="/anote">Anote</a>
                         <ul class="dropdown">
+                            <li><a href="/beginner">Beginner's Guide</a></li>
                             <li><a href="/mine">Mining Tutorial</a></li>
                             <li><a href="/purchase">Purchasing Tutorial</a></li>
                             <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
+                            <li><a href="/pi-comparison">Comparison to PI</a></li>
                         </ul>
                     </li>
                     <li class="has-dropdown">
