website - beginner's tutorial

--- a/beginner.html
+++ b/beginner.html
@@ -146,7 +146,20 @@
 
                             <h3>Absolute Beginner's Tutorial</h3>
 
-                            <p>Todo</p>
+                            <p>Follow these steps to get started as soon as possible:</p>
+
+                            <p>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Download and install <a href="https://telegram.org/" target="_blank">Telegram Instant Messenger</a><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Open <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> Telegram chat bot and click start button<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Subscribe to <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> Telegram channel<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Type and send /mine to <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Copy daily mining code from <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> to <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Join <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a> group based on your language preferences
+                            </p>
+
+                            <p>That's it, you're done, after this just follow the instructions you get from AnonsRobot to continue mining.</p>
+
+                            <p>You can find more detailed tutorial <a href="/mine">here</a>.</p>
 
                         </div>
                     </div>
