--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -144,7 +144,7 @@
                         </div>
                         <div class="blog-content">
 
-                            <h3>Anote vs PI Comparison</h3>
+                            <h3>Anote vs. PI Comparison</h3>
 
                             <p>Todo</p>
 
