--- a/anonsrobot.html
+++ b/anonsrobot.html
@@ -182,6 +182,10 @@
                                 only once in 24 hours.
                             </p>
 
+                            <h4>/calculate</h4>
+
+                            <p>This command informs you how much Anotes you'll get for some amount of Waves if you purchase.</p>
+
                             <h4>/shoutinfo</h4>
 
                             <p>This command informs you about the currently highest bid for ad on AnonShout channel for tomorrow.</p>
