--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -140,7 +140,7 @@
 
                     <div class="blog">
                         <div class="blog-img">
-                            <img class="img-responsive" src="./static/img/anote_logo.png" alt=""><br>
+                            <img class="img-responsive" src="./static/img/anote_vs_pi.png" alt=""><br>
                         </div>
                         <div class="blog-content">
 
