--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -140,13 +140,61 @@
 
                     <div class="blog">
                         <div class="blog-img">
-                            <img class="img-responsive" src="./static/img/anote_vs_pi.png" alt=""><br>
+                            <img class="img-responsive" src="./static/img/anote_vs_pi.png?v=1" alt=""><br>
                         </div>
                         <div class="blog-content">
 
                             <h3>Anote vs. PI Comparison</h3>
 
-                            <p>Todo</p>
+                            <p>Here's a table of Anote vs. Pi comparison:</p>
+
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="table-responsve">
+                                    <table class="table table-striped table-hover">
+                                      <thead class="thead-inverse">
+                                        <tr>
+                                            <th class="w-25"></th>
+                                            <th class="">Anote</th>
+                                            <th class="">Pi</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody>
+                                        <tr>
+                                          <td class="w-25 option">Mine</td>
+                                          <td><i class="fa fa-check"></i></td>
+                                          <td><i class="fa fa-check"></i></td>
+                                        </tr>
+                                        <tr>
+                                          <td class="option">Send</td>
+                                          <td><i class="fa fa-check"></i></td>
+                                          <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="option">Receive</td>
+                                            <td><i class="fa fa-check"></i></td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="option">Spend</td>
+                                            <td><i class="fa fa-check"></i></td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="option">Exchange</td>
+                                            <td><i class="fa fa-check"></i></td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="option">Purchase</td>
+                                            <td><i class="fa fa-check"></i></td>
+                                            <td>-</td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                </div>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
