--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -40,7 +40,7 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Anote Compared to PI | Anonutopia - A Smart Contract Country!" />
     <meta property="og:description"        content="Anote Compared to PI | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
-    <meta property="og:image"              content="https://www.anonutopia.com/static/img/fb.png?v=1.0.0" />
+    <meta property="og:image"              content="https://www.anonutopia.com/static/img/anote_vs_pi_fb.png?v=1.0.0" />
 
     <script type="text/javascript">
 
