--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -36,7 +36,7 @@
     
     
 
-    <meta property="og:url"                content="https://www.anonutopia.com/anote/" />
+    <meta property="og:url"                content="https://www.anonutopia.com/pi-comparison" />
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Anote Compared to PI | Anonutopia - A Smart Contract Country!" />
     <meta property="og:description"        content="Anote Compared to PI | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
