--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -190,6 +190,11 @@
                                             <td><i class="fa fa-check"></i></td>
                                             <td>-</td>
                                         </tr>
+                                        <tr>
+                                            <td class="option">Value Right Away</td>
+                                            <td><i class="fa fa-check"></i></td>
+                                            <td>-</td>
+                                        </tr>
                                       </tbody>
                                     </table>
                                 </div>
