--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -191,7 +191,7 @@
                                             <td>-</td>
                                         </tr>
                                         <tr>
-                                            <td class="option">Value Right Away</td>
+                                            <td class="option">Has Value Right Away</td>
                                             <td><i class="fa fa-check"></i></td>
                                             <td>-</td>
                                         </tr>
