--- a/pi-comparison.html
+++ b/pi-comparison.html
@@ -166,6 +166,11 @@
                                           <td><i class="fa fa-check"></i></td>
                                         </tr>
                                         <tr>
+                                            <td class="w-25 option">Referral Program</td>
+                                            <td><i class="fa fa-check"></i></td>
+                                            <td><i class="fa fa-check"></i></td>
+                                          </tr>
+                                        <tr>
                                           <td class="option">Send</td>
                                           <td><i class="fa fa-check"></i></td>
                                           <td>-</td>
