--- a/anote.html
+++ b/anote.html
@@ -10,8 +10,8 @@
     <meta name="google-site-verification" content="Z6HC-hN3X2QZ3R7IWm6tblZar4bae-VQwLANyhICYOc" />
     <meta name="google-site-verification" content="1Lbth8wmGgjTQ03I8a0ab4Q6wKw5LLIsBqhxmwltIkI" />
 
-    <title>What is Anote? | Anonutopia - A Smart Contract Country</title>
-    <meta name="description" content="What is Anote? | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
+    <title>Anote Crypto Currency | Anonutopia - A Smart Contract Country</title>
+    <meta name="description" content="Anote Crypto Currency | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
 
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
