referral - start hack

--- a/anonshout.html
+++ b/anonshout.html
@@ -147,7 +147,7 @@
                             <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels that give <a href="/anote">Anote</a> 
                             its value because ads on the network can only be purchased with anotes and new anotes are minted (generated) by watching ads.</p>
                             <p>You can bid for ads on AnonShout by sending anotes to the address bellow, but you need to be 
-                            registered with <a href="https://t.me/AnonsRobot">AnonsRobot</a>.</p>
+                            registered with <a href="https://t.me/AnonsRobot" class="robot">AnonsRobot</a>.</p>
 
                             <p>If you would like to see the highest bid for tomorrow, hit /shoutinfo command with AnonsRobot. You can find a tutorial on 
                             AnonsRobot usage <a href="/anonsrobot">here</a>. Currently we only have one ads channel, but we will expand it with more 
@@ -267,7 +267,7 @@
     <script src="./static/js/datamaps.world.min.js"></script>
     
     <script src="./static/js/js.cookie.min.js"></script>
-    <script type="text/javascript" src="./static/js/main.js?v=1.0.20"></script>
+    <script type="text/javascript" src="./static/js/main.js?v=1.0.21"></script>
 
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
