--- a/anote.html
+++ b/anote.html
@@ -174,7 +174,7 @@
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;add them to one of our groups - 
                                 <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a><br>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;send them your referral link which you can get if you enter /status command using 
-                                <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
+                                <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>
                             </p>
 
                             <p>If one of your referred users purchases Anote for Waves (creates new denominations), you get 20%.</p>
@@ -318,7 +318,7 @@
     <script src="./static/js/datamaps.world.min.js"></script>
     
     <script src="./static/js/js.cookie.min.js"></script>
-    <script type="text/javascript" src="./static/js/main.js?v=1.0.20"></script>
+    <script type="text/javascript" src="./static/js/main.js?v=1.0.21"></script>
 
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
