--- a/beginner.html
+++ b/beginner.html
@@ -150,10 +150,10 @@
 
                             <p>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Download and install <a href="https://telegram.org/" target="_blank">Telegram Instant Messenger</a><br>
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;Open <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> Telegram chat bot and click start button<br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Open <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> Telegram chat bot and click start button<br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Subscribe to <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> Telegram channel<br>
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;Type and send /mine to <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a><br>
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;Copy daily mining code from <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> to <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Type and send /mine to <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;Copy daily mining code from <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> to <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a><br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;Join <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a> group based on your language preferences
                             </p>
 
@@ -264,7 +264,7 @@
     <script src="./static/js/datamaps.world.min.js"></script>
     
     <script src="./static/js/js.cookie.min.js"></script>
-    <script type="text/javascript" src="./static/js/main.js?v=1.0.20"></script>
+    <script type="text/javascript" src="./static/js/main.js?v=1.0.21"></script>
 
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
