--- a/mine.html
+++ b/mine.html
@@ -155,13 +155,13 @@
 
                             <p>Once you have these two installed either or your mobile phone or on your computer, simply open one of our Telegram 
                                 groups - <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a> 
-                                (depending on your location and language) and our friendly Telegram bot <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
+                                (depending on your location and language) and our friendly Telegram bot <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>
                                 will lead you through the rest of the process. If you have any questions, please don't hesitate to ask in one of our Telegram groups.
                             </p>
 
                             <p>The process is simple. You get subscribed to <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> Telegram channel 
                             where we show ads on a daily basis, together with a mining code. After you've seen the add, you call /mine command with 
-                            <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> and provide it the daily mining code. And that's it, next day 
+                            <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> and provide it the daily mining code. And that's it, next day 
                             you repeat the process.</p>
 
                             <p>You can read more on how to use AnonsRobot <a href="/anonsrobot">here</a> and AnonShout <a href="/anonshout">here</a>.</p>
@@ -185,7 +185,7 @@
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;add them to one of our groups - 
                                 <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a><br>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;send them your referral link which you can get if you enter /status command using 
-                                <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
+                                <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>
                             </p>
 
                         </div>
@@ -291,7 +291,7 @@
     <script src="./static/js/datamaps.world.min.js"></script>
     
     <script src="./static/js/js.cookie.min.js"></script>
-    <script type="text/javascript" src="./static/js/main.js?v=1.0.20"></script>
+    <script type="text/javascript" src="./static/js/main.js?v=1.0.21"></script>
 
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
