--- a/purchase.html
+++ b/purchase.html
@@ -148,7 +148,7 @@
 
                             <p>If you're not patient enough to mine it, you can always purchase Anote using Waves. Simply send Waves to the address bellow and you'll
                                 automatically receive your anotes according to the current price. Both address and price can be checked with 
-                                <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> too. All your Waves will go towards funding Anonutopia and direct democracy.
+                                <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> too. All your Waves will go towards funding Anonutopia and direct democracy.
                             </p>
 
                             <p>Before purchasing Anotes directly from Anonutopia which in fact creates new denominations, you should check offers on Waves Exchange 
@@ -273,7 +273,7 @@
     <script src="./static/js/datamaps.world.min.js"></script>
     
     <script src="./static/js/js.cookie.min.js"></script>
-    <script type="text/javascript" src="./static/js/main.js?v=1.0.20"></script>
+    <script type="text/javascript" src="./static/js/main.js?v=1.0.21"></script>
 
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
