--- a/anonsrobot.html
+++ b/anonsrobot.html
@@ -145,7 +145,7 @@
                         <div class="blog-content">
                             <h3>AnonsRobot Tutorial</h3>
 
-                            <p><a href="https://t.me/AnonsRobot">AnonsRobot</a> is a <a href="https://telegram.org/" target="_blank">Telegram</a> bot 
+                            <p><a href="https://t.me/AnonsRobot" class="robot">AnonsRobot</a> is a <a href="https://telegram.org/" target="_blank">Telegram</a> bot 
                                 and main tool for Anonutopia and Anote administration. For now it's mainly used for mining anotes. You use it by 
                                 chatting with it, as with any other user and providing it with commands that start with "/" sign, like /register, 
                                 /mine, /status and similar. You can use it in our Telegram groups or in private messages which is a preferred way. 
@@ -293,7 +293,7 @@
     <script src="./static/js/datamaps.world.min.js"></script>
     
     <script src="./static/js/js.cookie.min.js"></script>
-    <script type="text/javascript" src="./static/js/main.js?v=1.0.20"></script>
+    <script type="text/javascript" src="./static/js/main.js?v=1.0.21"></script>
 
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
