--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@
                             <a href="/">Home</a>
                             <a href="/about">About</a>
                             <a href="/anote">Anote</a>
-                            <a href="/anonshout">AnonShout</a>
+                            <a href="/projects">Projects</a>
                             <a href="/contact">Contact</a>
                         </div>
                     </div>
