update anonsrobot page

--- a/anonsrobot.html
+++ b/anonsrobot.html
@@ -190,6 +190,18 @@
 
                             <p>This command informs you about the currently highest bid for ad on AnonShout channel for tomorrow.</p>
 
+                            <h4>/nick</h4>
+
+                            <p>Use this command to setup your Anonutopia / Anote nickname.</p>
+
+                            <h4>/ref</h4>
+
+                            <p>Use somebody's nickname / referral code to setup your referral manually.</p>
+
+                            <h4>/team</h4>
+
+                            <p>See the list of your referred users team.</p>
+
                         </div>
                     </div>
 
