purchasing - how to buy waves

--- a/purchase.html
+++ b/purchase.html
@@ -155,6 +155,14 @@
                                 (wallet). This way, you might purchase them cheaper.
                             </p>
 
+                            <h4>How to purchase Waves?</h4>
+
+                            <p>If you don't have any Waves, you can buy them using your credit or debit card inside <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves.Exchange wallet</a>. 
+                                After purchasing, send them to the address bellow and you will receive your Anotes.
+                            </p>
+
+                            <p><strong><u>If you have Bitcoin or Ether, you can purchase with them too, just load them to Waves.Exchange wallet and send to the address bellow.</u></strong></p>
+
                             <br>
 
                             <h4><i class="fa fa-link"></i> Anote Waves Address</h4>
