--- a/purchase.html
+++ b/purchase.html
@@ -163,6 +163,11 @@
 
                             <p><strong><u>If you have Bitcoin or Ether, you can purchase with them too, just load them to Waves.Exchange wallet and send to the address bellow.</u></strong></p>
 
+                            <h4>Calculator</h4>
+
+                            <p><a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> has a built in calculator command (/calculate). You 
+                            just send it amount of waves you're planning to invest and it will return amount of anotes you are going to receive.</p>
+
                             <br>
 
                             <h4><i class="fa fa-link"></i> Anote Waves Address</h4>
