--- a/special-offer.html
+++ b/special-offer.html
@@ -144,15 +144,16 @@
 
                 
                 <div class="col-sm-12">
-                    <p>This is our very special offer with a mission to reach first milestone of our crowdfunding campaing 
+                    <p>This is our very special offer with a mission to reach the first milestone of our crowdfunding campaing 
                         and to get to the second phase as soon as possible. Current Anote price is <strong>0.0415 €</strong>
                         to create new anotes and we're selling <strong>100,000 for a speacial price of 0.01 € per Anote</strong>.
                         These are premined anotes owned by developers and Anonutopia as a project.</p>
 
-                    <p>This offer is valida until 100,000 batch of anotes is sold.</p>
+                    <p>This offer is valida until first 100.000 anotes are sold.</p>
 
-                    <p>To purchase anotes with this very special price, please send Waves, Ether or Bitcoin to the address bellow.
-                        Please notice that if you're purchasing with Ether or Bitcoin, you must first load them to your Waves wallet.</p>
+                    <p>To purchase anotes at this very special price, please send Waves, Ether or Bitcoin to the address bellow.</p>
+                        
+                    <p><u>Please notice that if you're purchasing with Ether or Bitcoin, you must first load them to your Waves wallet.</u></p>
 
                     <br>
 
