--- a/special-offer.html
+++ b/special-offer.html
@@ -146,10 +146,11 @@
                 <div class="col-sm-12">
                     <p>This is our very special offer with a mission to reach the first milestone of our crowdfunding campaing 
                         and to get to the second phase as soon as possible. Current Anote price is <strong>0.0415 €</strong>
-                        to create new anotes and we're selling <strong>100,000 for a speacial price of 0.01 € per Anote</strong>.
-                        These are premined anotes owned by developers and Anonutopia as a project.</p>
+                        to create new anotes and we're selling some of premined anotes owned by developers and Anonutopia as a project.</p>
 
-                    <p>This offer is valida until first 100.000 anotes are sold.</p>
+                    <p><strong>We are selling 100,000 anotes for a speacial price of 0.01 € per Anote</strong>.</p>
+
+                    <p>This offer is valid until first 100.000 anotes are sold.</p>
 
                     <p>To purchase anotes at this very special price, please send Waves, Ether or Bitcoin to the address bellow.</p>
                         
