--- a/special-offer.html
+++ b/special-offer.html
@@ -148,7 +148,7 @@
                         and to get to the second phase as soon as possible. Current Anote price is <strong>0.0415 €</strong>
                         to create new anotes and we're selling some of premined anotes owned by developers and Anonutopia as a project.</p>
 
-                    <p><strong>We are selling 100,000 anotes for a speacial price of 0.01 € per Anote</strong>.</p>
+                    <p><strong>We are selling 100,000 anotes at a speacial price of 0.01 € per Anote</strong>.</p>
 
                     <p>This offer is valid until first 100.000 anotes are sold.</p>
 
