--- a/special-offer.html
+++ b/special-offer.html
@@ -160,7 +160,9 @@
 
                     <h5>Purchasing address:</h5>
 
-                    <div class="well text-center">3P2EtZMgEN4W49hLXy966D53oHiE52gawhn</div>
+                    <div class="well">
+                        <p class="text-center" style="margin-bottom: 0; word-break: break-all;">3P2EtZMgEN4W49hLXy966D53oHiE52gawhn</p>
+                    </div>
                 </div>
                 
             </div>
