--- a/anote.html
+++ b/anote.html
@@ -145,7 +145,7 @@
                         <div class="blog-content">
                             <h3>About Anote</h3>
 
-                            <p>Anote is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based cryptocurrency that can be mined, 
+                            <p>Anote crypto currency is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based crypto token that can be mined, 
                             sent, received, exchanged or sold and used right from the start to purchase ads on our Telegram ad channel - 
                             <a href="https://t.me/AnonShout">AnonShout</a>. This is also what gives it value right away because you can only purchase 
                             ads on AnonShout by using anotes. You can read more about AnonShout <a href="/anonshout">here</a>. Anote  
