--- a/anote.html
+++ b/anote.html
@@ -143,7 +143,7 @@
                             <img class="img-responsive" src="./static/img/anote_logo.png" alt=""><br>
                         </div>
                         <div class="blog-content">
-                            <h3>About Anote</h3>
+                            <h3>Anote Crypto Currency</h3>
 
                             <p>Anote crypto currency is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based crypto token that can be mined, 
                             sent, received, exchanged or sold and used right from the start to purchase ads on our Telegram ad channel - 
