--- a/aint.html
+++ b/aint.html
@@ -145,7 +145,32 @@
                         <div class="blog-content">
                             <h3>AINT Crypto Currency</h3>
 
-                            <p>AINT crypto currency is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based crypto token</p>
+                            <p>AINT crypto currency is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based crypto token 
+                            that can be purchased, sent, received, exchanged or sold and used as a mining power unit for 
+                            <a href="/anote">Anote</a>. AINT stands for Anonutopia Infrastructure Token.</p>
+
+                            <p><strong>There are 144,000.00 AINTs and they can not be reissued.</strong></p>
+
+                            <p>AINT initial selling price is calculated using Anote price from the exchanges in a way that ROI (Return On 
+                            Investment) goes around 100% per year. Of course, this will be much more, because Anote price is definitely 
+                            going to rise for quite some time. So the formula would be - Anote price * 24 * 365.</p>
+
+                            <p style="margin-bottom: 40px;">After purchasing, AINT is automatically added to your basic Anote mining power 
+                                in 1:1 ratio. 1.0 AINT = 1 Anote per hour.
+                            </p>
+
+                            <h4><i class="fa fa-link"></i> AINT Waves Address</h4>
+
+                            <div class="well" style="margin-bottom: 40px;">
+                                <p class="text-center" style="margin-bottom: 0; word-break: break-all;">3PLyWsbNa96tLGZb1dhX6D1tvGhUE9FBf8F</p>
+                            </div>
+
+                            <h4><i class="fa fa-qrcode"></i> AINT QR Code</h4>
+                            <div class="well" style="margin-bottom: 40px;">
+                                <p class="text-center" style="margin-bottom: 0;">
+                                    <img src="./static/img/qr-code-aint.svg" alt="QR Code Address" style="min-width: 30%; max-width: 100%; width: 600px;">
+                                </p>
+                            </div>
 
                         </div>
                     </div>
