--- a/aint.html
+++ b/aint.html
@@ -155,9 +155,23 @@
                             Investment) goes around 100% per year. Of course, this will be much more, because Anote price is definitely 
                             going to rise for quite some time. So the formula would be - Anote price * 24 * 365.</p>
 
-                            <p style="margin-bottom: 40px;">After purchasing, AINT is automatically added to your basic Anote mining power 
+                            <p>After purchasing, AINT is automatically added to your basic Anote mining power 
                                 in 1:1 ratio. 1.0 AINT = 1 Anote per hour.
                             </p>
+
+                            <p style="margin-bottom: 40px;">Down the road, AINT will be used as a PoS (Proof of Stake) token for Anonutopia nodes and desktop miners.</p>
+
+                            <h4>How to purchase AINT?</h4>
+
+                            <p>To purchase AINTs, simply send Waves to the address bellow and you'll automatically receive your AINTS according to the current price which 
+                                can be checked with <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> by using /info command. All your Waves 
+                                will go towards funding Anonutopia and direct democracy.</p>
+
+                            <p>If you don't have any Waves, you can buy them using your credit or debit card inside 
+                                <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves.Exchange</a> wallet.</p>
+
+                            <p style="margin-bottom: 40px;"><strong><u>If you have Bitcoin or Ether, you can purchase with them too, just load them to Waves.Exchange wallet and send to the address 
+                                bellow.</u></strong></p>
 
                             <h4><i class="fa fa-link"></i> AINT Waves Address</h4>
 
